corrected error with overflow page

--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -15,17 +15,20 @@
     }
 }
 .modal {
-    max-width: toRem(800);
-    margin: 0 auto;
     opacity: 0;
     visibility: hidden;
-    background-color: rgb(192, 189, 189);
-    padding: toRem(20);
-    border-radius: toRem(20);
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
     z-index: 5;
     transition: all 0.3s;
     scale: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     .show-modal & {
         opacity: 1;
@@ -35,9 +38,18 @@
 
     // .modal__header
 
+    &__content {
+        max-width: toRem(800);
+        margin: 0 auto;
+        background-color: rgb(192, 189, 189);
+        padding: toRem(20);
+        border-radius: toRem(20);
+    }
+
     &__header {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         flex-wrap: wrap;
         gap: toRem(20);
 
