--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,20 +24,7 @@ $smallMobile: toEm(320);
     display: flex;
     flex-direction: column;
     min-height: 100%;
-}
-.wrapper main {
-    flex-grow: 1;
-    padding-top: toRem(194);
-}
 
-[class*="__container"] {
-    max-width: toRem(1250);
-    padding-inline: toRem(15);
-    margin: 0 auto;
-}
-
-body {
-    background-color: gray;
     position: relative;
 
     &::after {
@@ -55,6 +42,29 @@ body {
         .show-modal & {
             opacity: 1;
             visibility: visible;
+            overflow: hidden;
+            touch-action: none;
+            overscroll-behavior: none;
         }
+    }
+}
+.wrapper main {
+    flex-grow: 1;
+    padding-top: toRem(194);
+}
+
+[class*="__container"] {
+    max-width: toRem(1250);
+    padding-inline: toRem(15);
+    margin: 0 auto;
+}
+
+body {
+    background-color: gray;
+
+    .show-modal & {
+        overflow: hidden;
+        touch-action: none;
+        overscroll-behavior: none;
     }
 }
